# VisionRL

./: .config  .dockerignore  .gitignore  AGENTS.md  CLOSEOUT_2026-04-27.md  DESIGN_world_model_rl.md  Dockerfile  README.md  SPRINT_distributed_resource_config.md  SPRINT_ray_only_rollout_backend.md  docker-compose.yml  pyproject.toml  readme.md
benchmarks/: bench_rl_env.py  bench_rollout.py  bench_samples_api.py  bench_state_fork.py  compare_runs.py
benchmarks/payloads/: genie_profile.json
benchmarks/results/: cosmos_benchmark_smoke.json  genie_default_baseline.json  genie_default_batched.json  genie_heavy_off.json  genie_heavy_on.json  genie_profile_baseline.json  genie_profile_batched.json  rl_genie_env_benchmark.json  rl_toy_env_benchmark.json
configs/base/: actor.yaml  trainer.yaml
configs/dataset/: pickapic_v2.yaml
docs/: BENCHMARKING.md  GENIE_ECS_BASELINE.md  GENIE_ECS_EXECUTION_PLAN.md  GENIE_ECS_GATES.md  GENIE_ECS_RUNTIME_PROFILE.md  GENIE_RL_BACKEND_GAP.md  GENIE_STAGE_RUNTIME.md  REPO_ROADMAP.md  RL_ENV_USAGE.md  STARTUP_STRATEGY.md  TARGET_ARCHITECTURE_GAP.md  WAN22_BASELINE.md  WAN22_PROFILING_PLAN.md  WAN_SERVING_SCAFFOLD.md
examples/: rl_train_toy_world.py
plans/: INDUSTRIAL_RL_EXECUTION_PLAN.md  RL_TRAINING_INTEGRATION_PLAN.md  genie_ecs_status.json
scripts/: analyze_profile.py  base_ocr_ceiling.py  gpu_monitor.sh  multi_ckpt_ceiling.py  noise_floor.py  noise_floor_analyze.py  sd3_heldout_paper_eval.py  sd3_multi_ckpt_ceiling.py
tests/: base.py  conftest.py  test_algorithms.py  test_artifact_store.py  test_bench_rl_env.py  test_bench_rollout.py  test_bench_samples_api.py  test_benchmarking.py  test_boundary_conventions.py  test_controlplane.py  test_engine.py  test_engine_loop.py  test_execution.py  test_genie.py  test_genie_runtime.py  test_iteration_runner.py  test_job_queue.py  test_layers_import.py  test_rl_api.py  test_rl_env.py  test_rl_genie_adapter.py  test_rl_runtime.py  test_rl_training.py  test_runtime_execution.py  test_server.py  test_serving_cosmos.py  test_serving_wan.py  test_temporal_store.py  test_wan_batching.py  test_wan_runtime.py  test_wan_truthfulness.py
tests/algorithms/: test_dpo.py  (+4 more)
vrl/: __init__.py  config.py
wm_infra/: __init__.py  benchmarking.py  config.py
(+582 files in other folders)
